--- a/index.html
+++ b/index.html
@@ -6,75 +6,141 @@
 <title>Vyxbio</title>
 
 <style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
 }
 
-body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body{
     font-family: Arial, sans-serif;
-    color: white;
-    text-align: center;
+    color:white;
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    padding:20px;
 
-    /* Фон */
-    background: url('https://fons.grizly.club/uploads/posts/2025-06/26/1750922652114.jpg') no-repeat center center fixed;
-    background-size: cover;
+    background:url('https://fons.grizly.club/uploads/posts/2025-06/26/1750922652114.jpg') no-repeat center center fixed;
+    background-size:cover;
 }
 
 /* затемнение фона */
-body::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0,0,0,0.6);
+body::before{
+    content:"";
+    position:fixed;
+    inset:0;
+    background:rgba(0,0,0,0.65);
+    backdrop-filter: blur(4px);
+    z-index:-1;
 }
 
-/* контейнер */
-.content {
-    position: relative;
-    z-index: 1;
+/* стеклянная карточка */
+.card{
+    width:100%;
+    max-width:600px;
+    background:rgba(0,0,0,0.55);
+    backdrop-filter: blur(10px);
+    border-radius:20px;
+    padding:40px;
+    box-shadow:0 0 40px rgba(0,0,0,0.7);
+
+    animation:fadeIn 1.5s ease forwards;
+    opacity:0;
 }
 
-/* строки */
-.line {
-    opacity: 0;
-    transform: translateY(20px);
-    animation: fadeUp 1.5s forwards;
+@keyframes fadeIn{
+    to{opacity:1;}
 }
 
-.line:nth-child(1) { animation-delay: 0.5s; }
-.line:nth-child(2) { animation-delay: 2s; }
-.line:nth-child(3) { animation-delay: 3.5s; }
+h1{
+    text-align:center;
+    margin-bottom:30px;
+    font-size:36px;
+    font-weight:300;
+}
 
-@keyframes fadeUp {
-    to {
-        opacity: 1;
-        transform: translateY(0);
+h2{
+    margin-top:20px;
+    margin-bottom:10px;
+    font-size:22px;
+    font-weight:500;
+}
+
+ul{
+    list-style:none;
+    margin-bottom:15px;
+}
+
+ul li{
+    margin:6px 0;
+    font-size:16px;
+    opacity:0;
+    transform:translateY(10px);
+    animation:lineFade 0.8s forwards;
+}
+
+ul li:nth-child(1){animation-delay:0.3s;}
+ul li:nth-child(2){animation-delay:0.5s;}
+ul li:nth-child(3){animation-delay:0.7s;}
+ul li:nth-child(4){animation-delay:0.9s;}
+ul li:nth-child(5){animation-delay:1.1s;}
+ul li:nth-child(6){animation-delay:1.3s;}
+
+@keyframes lineFade{
+    to{
+        opacity:1;
+        transform:translateY(0);
     }
 }
 
-h1 {
-    font-size: 48px;
-    margin-bottom: 20px;
-}
+/* 📱 Адаптация под телефон */
+@media (max-width:768px){
 
-p {
-    font-size: 20px;
-    margin: 10px 0;
+    body{
+        padding:15px;
+        background-attachment:scroll; /* чтобы не лагало на мобиле */
+    }
+
+    .card{
+        padding:25px;
+        border-radius:15px;
+    }
+
+    h1{
+        font-size:26px;
+    }
+
+    h2{
+        font-size:18px;
+    }
+
+    ul li{
+        font-size:14px;
+    }
 }
 </style>
 </head>
 <body>
 
-<div class="content">
-    <h1 class="line">Vyxbio</h1>
-    <p class="line">Добро пожаловать</p>
-    <p class="line">Лучшие UC PUBG по выгодной цене</p>
+<div class="card">
+
+<h1>Vyxbio Price</h1>
+
+<h2>UC PUBG</h2>
+<ul>
+<li>60 UC — 65₽</li>
+<li>325 UC — 299₽</li>
+<li>660 UC — 599₽</li>
+</ul>
+
+<h2>Дополнительно</h2>
+<ul>
+<li>Быстрая выдача</li>
+<li>Поддержка 24/7</li>
+<li>Безопасная оплата</li>
+</ul>
+
 </div>
 
 </body>
