--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ body{
     display:flex;
     justify-content:center;
     align-items:center;
-    padding:20px;
+    overflow:hidden;
 
-    background:url('https://fons.grizly.club/uploads/posts/2025-06/26/1750922652114.jpg') no-repeat center center fixed;
+    background:url('https://fons.grizly.club/uploads/posts/2025-06/26/1750922652114.jpg') no-repeat center center;
     background-size:cover;
 }
 
-/* затемнение фона */
+/* затемнение */
 body::before{
     content:"";
     position:fixed;
@@ -35,84 +35,130 @@ body::before{
     z-index:-1;
 }
 
-/* стеклянная карточка */
-.card{
+/* контейнер */
+.slider{
     width:100%;
     max-width:600px;
+    position:relative;
+}
+
+/* карточка */
+.card{
+    display:none;
     background:rgba(0,0,0,0.55);
-    backdrop-filter: blur(10px);
+    backdrop-filter: blur(12px);
     border-radius:20px;
     padding:40px;
     box-shadow:0 0 40px rgba(0,0,0,0.7);
+    animation:fadeIn 0.6s ease;
+}
 
-    animation:fadeIn 1.5s ease forwards;
-    opacity:0;
+.card.active{
+    display:block;
 }
 
 @keyframes fadeIn{
-    to{opacity:1;}
+    from{opacity:0; transform:translateY(20px);}
+    to{opacity:1; transform:translateY(0);}
 }
 
 h1{
     text-align:center;
-    margin-bottom:30px;
-    font-size:36px;
+    margin-bottom:25px;
     font-weight:300;
 }
 
 h2{
-    margin-top:20px;
+    margin-top:15px;
     margin-bottom:10px;
-    font-size:22px;
-    font-weight:500;
+    font-size:20px;
 }
 
 ul{
     list-style:none;
-    margin-bottom:15px;
 }
 
 ul li{
     margin:6px 0;
-    font-size:16px;
-    opacity:0;
-    transform:translateY(10px);
-    animation:lineFade 0.8s forwards;
+    font-size:15px;
 }
 
-ul li:nth-child(1){animation-delay:0.3s;}
-ul li:nth-child(2){animation-delay:0.5s;}
-ul li:nth-child(3){animation-delay:0.7s;}
-ul li:nth-child(4){animation-delay:0.9s;}
-ul li:nth-child(5){animation-delay:1.1s;}
-ul li:nth-child(6){animation-delay:1.3s;}
-
-@keyframes lineFade{
-    to{
-        opacity:1;
-        transform:translateY(0);
-    }
+/* Telegram кнопка */
+.telegram-btn{
+    margin-top:25px;
+    display:flex;
+    justify-content:center;
 }
 
-/* 📱 Адаптация под телефон */
+.telegram-btn a{
+    display:flex;
+    align-items:center;
+    gap:10px;
+    padding:12px 20px;
+    border-radius:30px;
+    text-decoration:none;
+    color:white;
+    font-size:15px;
+
+    background:rgba(255,255,255,0.08);
+    backdrop-filter: blur(8px);
+    border:1px solid rgba(255,255,255,0.15);
+    transition:0.3s;
+}
+
+.telegram-btn a:hover{
+    background:rgba(255,255,255,0.15);
+}
+
+/* прозрачная иконка */
+.telegram-btn svg{
+    width:18px;
+    height:18px;
+    fill:white;
+    opacity:0.85;
+}
+
+/* точки */
+.dots{
+    margin-top:20px;
+    text-align:center;
+}
+
+.dot{
+    height:8px;
+    width:8px;
+    margin:0 5px;
+    background:rgba(255,255,255,0.4);
+    border-radius:50%;
+    display:inline-block;
+    cursor:pointer;
+    transition:0.3s;
+}
+
+.dot.active{
+    background:white;
+}
+
+/* 📱 мобилка */
 @media (max-width:768px){
 
     body{
-        padding:15px;
-        background-attachment:scroll; /* чтобы не лагало на мобиле */
+        padding:20px;
+        background-size:cover;
+        background-position:center;
     }
 
     .card{
         padding:25px;
-        border-radius:15px;
+        border-radius:16px;
     }
 
     h1{
-        font-size:26px;
+        font-size:24px;
     }
 
     h2{
-        font-size:18px;
+        font-size:17px;
     }
 
     ul li{
@@ -123,8 +169,10 @@ ul li:nth-child(6){animation-delay:1.3s;}
 </head>
 <body>
 
-<div class="card">
+<div class="slider">
 
+<!-- Слайд 1 -->
+<div class="card active">
 <h1>Vyxbio Price</h1>
 
 <h2>UC PUBG</h2>
@@ -134,14 +182,59 @@ ul li:nth-child(6){animation-delay:1.3s;}
 <li>660 UC — 599₽</li>
 </ul>
 
-<h2>Дополнительно</h2>
+<div class="telegram-btn">
+<a href="https://t.me/vyxedith" target="_blank">
+<svg viewBox="0 0 24 24">
+<path d="M9.04 15.47l-.39 4.12c.56 0 .8-.24 1.1-.53l2.64-2.52 5.48 4.01c1 .55 1.72.26 1.97-.93l3.57-16.73c.33-1.54-.56-2.14-1.53-1.78L1.47 9.23c-1.5.59-1.48 1.42-.27 1.8l5.9 1.84L19.44 4.5c.58-.36 1.1-.16.66.2"/>
+</svg>
+Telegram
+</a>
+</div>
+</div>
+
+<!-- Слайд 2 -->
+<div class="card">
+<h1>Информация</h1>
+
 <ul>
 <li>Быстрая выдача</li>
 <li>Поддержка 24/7</li>
-<li>Безопасная оплата</li>
+<li>Безопасная сделка</li>
+<li>Гарантия</li>
 </ul>
 
+<div class="telegram-btn">
+<a href="https://t.me/vyxedith" target="_blank">
+<svg viewBox="0 0 24 24">
+<path d="M9.04 15.47l-.39 4.12c.56 0 .8-.24 1.1-.53l2.64-2.52 5.48 4.01c1 .55 1.72.26 1.97-.93l3.57-16.73c.33-1.54-.56-2.14-1.53-1.78L1.47 9.23c-1.5.59-1.48 1.42-.27 1.8l5.9 1.84L19.44 4.5c.58-.36 1.1-.16.66.2"/>
+</svg>
+Telegram
+</a>
 </div>
+</div>
+
+<div class="dots">
+<span class="dot active" onclick="showSlide(0)"></span>
+<span class="dot" onclick="showSlide(1)"></span>
+</div>
+
+</div>
+
+<script>
+let current = 0;
+const slides = document.querySelectorAll(".card");
+const dots = document.querySelectorAll(".dot");
+
+function showSlide(index){
+    slides[current].classList.remove("active");
+    dots[current].classList.remove("active");
+
+    current = index;
+
+    slides[current].classList.add("active");
+    dots[current].classList.add("active");
+}
+</script>
 
 </body>
 </html>
