--- a/index.html
+++ b/index.html
@@ -12,35 +12,40 @@ body{
     font-family: Arial, sans-serif;
     color:white;
     min-height:100vh;
-    display:flex;
-    justify-content:center;
-    align-items:center;
     overflow:hidden;
 
     background:url('https://fons.grizly.club/uploads/posts/2025-06/26/1750922652114.jpg') no-repeat center center;
     background-size:cover;
-    background-attachment:fixed;
 }
 
-/* затемнение */
 body::before{
     content:"";
     position:fixed;
     inset:0;
     background:rgba(0,0,0,0.65);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(6px);
     z-index:-1;
 }
 
-.slider{
+.slider-wrapper{
     width:100%;
-    max-width:650px;
-    position:relative;
+    height:100vh;
     overflow:hidden;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+
+.slider{
+    display:flex;
+    transition: transform 0.6s ease;
+    width:200%;
 }
 
 .card{
-    display:none;
+    width:100%;
+    max-width:650px;
+    margin:auto;
     background:rgba(0,0,0,0.55);
     backdrop-filter: blur(14px);
     border-radius:22px;
@@ -48,81 +53,10 @@ body::before{
     box-shadow:0 0 40px rgba(0,0,0,0.7);
 }
 
-.card.active{
-    display:block;
-}
-
-/* Анимация строк */
-.fade-line{
-    opacity:0;
-    transform:translateY(15px);
-    animation:lineFade 0.6s forwards;
-}
-
-@keyframes lineFade{
-    to{
-        opacity:1;
-        transform:translateY(0);
-    }
-}
-
-h1{
-    text-align:center;
-    margin-bottom:25px;
-    font-weight:300;
-}
-
-h2{
-    margin-top:18px;
-    margin-bottom:10px;
-    font-size:20px;
-    letter-spacing:1px;
-}
-
-ul{list-style:none;}
-
-ul li{
-    margin:6px 0;
-    font-size:15px;
-}
-
-/* Telegram */
-.telegram-btn{
-    margin-top:25px;
-    display:flex;
-    justify-content:center;
-}
-
-.telegram-btn a{
-    display:flex;
-    align-items:center;
-    gap:10px;
-    padding:12px 22px;
-    border-radius:30px;
-    text-decoration:none;
-    color:white;
-    font-size:15px;
-
-    background:rgba(255,255,255,0.08);
-    backdrop-filter: blur(10px);
-    border:1px solid rgba(255,255,255,0.15);
-    transition:0.3s;
-}
-
-.telegram-btn a:hover{
-    background:rgba(255,255,255,0.18);
-}
-
-.telegram-btn svg{
-    width:18px;
-    height:18px;
-    fill:white;
-    opacity:0.85;
-}
-
-/* точки */
 .dots{
-    margin-top:20px;
+    position:fixed;
+    bottom:20px;
+    width:100%;
     text-align:center;
 }
 
@@ -134,129 +68,169 @@ ul li{
     border-radius:50%;
     display:inline-block;
     cursor:pointer;
-    transition:0.3s;
 }
 
 .dot.active{
     background:white;
 }
 
-/* 📱 мобилка */
-@media (max-width:768px){
+.telegram-btn{
+    margin-top:25px;
+    display:flex;
+    justify-content:center;
+}
 
-    body{
-        padding:20px;
-        background-position:center;
-        background-size:cover;
-    }
+.telegram-btn a{
+    padding:12px 22px;
+    border-radius:30px;
+    text-decoration:none;
+    color:white;
+    font-size:15px;
+    background:rgba(255,255,255,0.08);
+    backdrop-filter: blur(10px);
+    border:1px solid rgba(255,255,255,0.15);
+}
 
+/* музыка кнопка */
+.music-toggle{
+    position:fixed;
+    left:25px;
+    top:20px;
+    background:rgba(0,0,0,0.5);
+    padding:8px 14px;
+    border-radius:20px;
+    cursor:pointer;
+    backdrop-filter:blur(6px);
+    font-size:14px;
+}
+
+.views{
+    position:fixed;
+    top:20px;
+    right:25px;
+    background:rgba(0,0,0,0.5);
+    padding:8px 14px;
+    border-radius:20px;
+    font-size:14px;
+    backdrop-filter:blur(6px);
+}
+
+@media(max-width:768px){
     .card{
+        margin:20px;
         padding:25px;
-        border-radius:18px;
     }
-
-    h1{font-size:23px;}
-    h2{font-size:16px;}
-    ul li{font-size:14px;}
 }
 </style>
 </head>
 <body>
 
+<div class="music-toggle" onclick="toggleMusic()">🔊 Музыка</div>
+
+<div class="views">
+👁 <span id="viewCount">...</span>
+</div>
+
+<div class="slider-wrapper">
 <div class="slider" id="slider">
 
-<!-- Слайд 1 -->
-<div class="card active">
-<h1 class="fade-line" style="animation-delay:0.1s">Vyxbio</h1>
-
-<h2 class="fade-line" style="animation-delay:0.2s">UC PUBG</h2>
-<ul>
-<li class="fade-line" style="animation-delay:0.3s">60 UC — 65₽</li>
-<li class="fade-line" style="animation-delay:0.4s">325 UC — 299₽</li>
-<li class="fade-line" style="animation-delay:0.5s">660 UC — 599₽</li>
-</ul>
-
-<div class="telegram-btn fade-line" style="animation-delay:0.6s">
-<a href="https://t.me/vyxedith" target="_blank">
-<svg viewBox="0 0 24 24">
-<path d="M9.04 15.47l-.39 4.12c.56 0 .8-.24 1.1-.53l2.64-2.52 5.48 4.01c1 .55 1.72.26 1.97-.93l3.57-16.73c.33-1.54-.56-2.14-1.53-1.78L1.47 9.23c-1.5.59-1.48 1.42-.27 1.8l5.9 1.84L19.44 4.5c.58-.36 1.1-.16.66.2"/>
-</svg>
-Telegram
-</a>
+<div class="card">
+<h1>Vyxbio</h1>
+<p>60 UC — 65₽</p>
+<div class="telegram-btn">
+<a href="https://t.me/vyxedith" target="_blank">Telegram</a>
 </div>
 </div>
 
-<!-- Слайд 2 -->
 <div class="card">
 <h1>Био</h1>
+<p>— информационное досье</p>
+<p>— оперативная аналитика</p>
+<p>— OSINT поиск</p>
+<p>— индивидуальное обучение</p>
+</div>
 
-<h2>Увлекался ранее</h2>
-<ul>
-<li>— информационным досье</li>
-<li>— оперативной аналитикой</li>
-<li>— OSINT поиском</li>
-</ul>
-
-<h2>ОБУЧАЛСЯ</h2>
-<ul>
-<li>— индивидуальной программой</li>
-</ul>
-
-<h2>ИСПОЛЬЗОВАЛ</h2>
-<ul>
-<li>— инструменты и практику</li>
-</ul>
-
-<div class="telegram-btn">
-<a href="https://t.me/vyxedith" target="_blank">
-<svg viewBox="0 0 24 24">
-<path d="M9.04 15.47l-.39 4.12c.56 0 .8-.24 1.1-.53l2.64-2.52 5.48 4.01c1 .55 1.72.26 1.97-.93l3.57-16.73c.33-1.54-.56-2.14-1.53-1.78L1.47 9.23c-1.5.59-1.48 1.42-.27 1.8l5.9 1.84L19.44 4.5c.58-.36 1.1-.16.66.2"/>
-</svg>
-Telegram
-</a>
 </div>
 </div>
 
 <div class="dots">
-<span class="dot active" onclick="showSlide(0)"></span>
-<span class="dot" onclick="showSlide(1)"></span>
+<span class="dot active" onclick="goSlide(0)"></span>
+<span class="dot" onclick="goSlide(1)"></span>
 </div>
 
-</div>
+<audio id="bgMusic" src="music.mp3" loop></audio>
 
 <script>
 let current = 0;
-const slides = document.querySelectorAll(".card");
-const dots = document.querySelectorAll(".dot");
 const slider = document.getElementById("slider");
+const dots = document.querySelectorAll(".dot");
+const music = document.getElementById("bgMusic");
 
-function showSlide(index){
-    slides[current].classList.remove("active");
-    dots[current].classList.remove("active");
-
+function goSlide(index){
     current = index;
-
-    slides[current].classList.add("active");
-    dots[current].classList.add("active");
+    slider.style.transform = "translateX(-" + index*50 + "%)";
+    dots.forEach(d=>d.classList.remove("active"));
+    dots[index].classList.add("active");
 }
 
 /* свайп */
 let startX = 0;
-
-slider.addEventListener("touchstart", e=>{
+document.addEventListener("touchstart", e=>{
     startX = e.touches[0].clientX;
 });
+document.addEventListener("touchend", e=>{
+    let diff = startX - e.changedTouches[0].clientX;
+    if(diff > 50) goSlide((current+1)%2);
+    if(diff < -50) goSlide((current-1+2)%2);
+});
 
-slider.addEventListener("touchend", e=>{
-    let endX = e.changedTouches[0].clientX;
-    let diff = startX - endX;
+/* Плавное включение */
+function fadeIn(){
+    music.volume = 0;
+    music.play();
+    let vol = 0;
+    let interval = setInterval(()=>{
+        if(vol < 1){
+            vol += 0.05;
+            music.volume = vol;
+        } else {
+            clearInterval(interval);
+        }
+    },200);
+}
 
-    if(diff > 50){
-        showSlide((current+1) % slides.length);
+/* Плавное выключение */
+function fadeOut(){
+    let vol = music.volume;
+    let interval = setInterval(()=>{
+        if(vol > 0.05){
+            vol -= 0.05;
+            music.volume = vol;
+        } else {
+            music.pause();
+            clearInterval(interval);
+        }
+    },200);
+}
+
+let playing = false;
+function toggleMusic(){
+    if(!playing){
+        fadeIn();
+        playing = true;
+        document.querySelector(".music-toggle").innerText="🔇 Выкл";
+    } else {
+        fadeOut();
+        playing = false;
+        document.querySelector(".music-toggle").innerText="🔊 Музыка";
     }
-    if(diff < -50){
-        showSlide((current-1+slides.length) % slides.length);
-    }
+}
+
+/* счетчик */
+fetch("https://api.countapi.xyz/hit/vyxbio/visits")
+.then(res=>res.json())
+.then(data=>{
+    document.getElementById("viewCount").innerText = data.value;
 });
 </script>
 
