--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Vyxbio</title>
+<title>vyxbio</title>
 
 <style>
 * {
@@ -14,164 +14,246 @@
 }
 
 body {
-    background: #000;
-    color: white;
-    overflow: hidden;
-}
-
-.slider {
-    position: relative;
-    width: 100vw;
     height: 100vh;
     overflow: hidden;
+    background: url("https://fons.grizly.club/uploads/posts/2025-06/26/1750922654029.jpg") no-repeat center center fixed;
+    background-size: cover;
+    color: white;
+}
+
+/* затемнение */
+body::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background: rgba(0,0,0,0.75);
+    z-index: 0;
+}
+
+/* контейнер слайдов */
+.slider {
+    display: flex;
+    width: 200%;
+    height: 100vh;
+    transition: transform 0.6s ease;
+    position: relative;
+    z-index: 1;
 }
 
 .slide {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: transform 0.6s ease;
+    padding: 20px;
 }
 
-.slide:nth-child(1) {
-    background: url("bg.jpg") center/cover no-repeat;
-}
-
-.slide:nth-child(2) {
-    background: url("bg.jpg") center/cover no-repeat;
-}
-
-.content-box {
-    background: rgba(0,0,0,0.7);
-    padding: 40px 60px;
-    border-radius: 20px;
+.card {
+    max-width: 700px;
+    width: 100%;
+    background: rgba(0,0,0,0.65);
     backdrop-filter: blur(10px);
-    text-align: center;
+    padding: 40px;
+    border-radius: 20px;
+    box-shadow: 0 0 40px rgba(0,0,0,0.5);
+    overflow-y: auto;
+    max-height: 85vh;
 }
 
-h1 {
-    font-size: 36px;
-    margin-bottom: 10px;
-}
-
-p {
+.card h1 {
     margin-bottom: 20px;
-    opacity: 0.8;
+    font-size: 28px;
 }
 
-button {
-    padding: 10px 25px;
-    border-radius: 30px;
-    border: 1px solid white;
-    background: transparent;
-    color: white;
+.card p {
+    margin-bottom: 10px;
+    line-height: 1.6;
+}
+
+a {
+    color: #7aa2ff;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+/* точки */
+.dots {
+    position: fixed;
+    bottom: 25px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 10px;
+    z-index: 2;
+}
+
+.dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: rgba(255,255,255,0.3);
     cursor: pointer;
-    transition: 0.3s;
 }
 
-button:hover {
+.dot.active {
     background: white;
-    color: black;
 }
 
+/* музыка кнопка */
 .music-btn {
     position: fixed;
     top: 20px;
     left: 20px;
-    padding: 8px 18px;
-    border-radius: 20px;
-    border: 1px solid white;
+    z-index: 2;
     background: rgba(0,0,0,0.6);
+    border: 1px solid rgba(255,255,255,0.3);
+    color: white;
+    padding: 8px 15px;
+    border-radius: 20px;
     cursor: pointer;
+    backdrop-filter: blur(10px);
 }
 </style>
 </head>
+
 <body>
 
-<div class="music-btn" id="musicToggle">🔇 Музыка</div>
+<button class="music-btn" onclick="toggleMusic()">Музыка</button>
 
 <div class="slider" id="slider">
 
-    <div class="slide" id="slide1">
-        <div class="content-box">
-            <h1>Vyxbio</h1>
-            <p>60 UC — 65₽</p>
-            <button onclick="nextSlide()">Telegram</button>
-        </div>
-    </div>
+<!-- СЛАЙД 1 -->
+<div class="slide">
+<div class="card">
+<h1>#vyxbio analytics</h1>
 
-    <div class="slide" id="slide2">
-        <div class="content-box">
-            <h1>Био</h1>
-            <p>
-                — информационное досье<br>
-                — оперативная аналитика<br>
-                — OSINT поиск<br>
-                — индивидуальное обучение
-            </p>
-        </div>
-    </div>
+<p><strong>РАССЛЕДОВАНИЯ</strong></p>
+<p>Экспресс-проверка личности: 9.99 USDT</p>
+<p>Полное досье (соцсети/связи): 24.99 USDT</p>
+<p>Мониторинг и история активности: 44.99 USDT</p>
 
+<br>
+
+<p><strong>ОБУЧЕНИЕ</strong></p>
+<p>Основы цифрового профилирования — 49.99 USDT</p>
+<p>Персональное наставничество.</p>
+<p>Сбор и анализ открытых источников (OSINT).</p>
+<p>Поиск утечек и метаданных.</p>
+<p>Обучение работе с API и парсерами.</p>
+<p>Практика: восстановление биографии по цифровому следу.</p>
+
+<br>
+
+<p><strong>СОФТ ПОД ЗАКАЗ</strong></p>
+<p>Боты/парсеры под твои задачи — от 24.99 USDT</p>
+
+<br>
+
+<p><strong>АККАУНТЫ ТЕЛЕГРАМ</strong></p>
+<p>+7 (РФ) — 3.99 USDT</p>
+<p>+380 (Укр) — 4.99 USDT</p>
+<p>+1 (США/Канада) — 7.99 USDT</p>
+
+<br>
+
+<p>—</p>
+<p>по вопросам: @vyxeyes</p>
+<p>канал: <a href="https://t.me/vyxedith" target="_blank">https://t.me/vyxedith</a></p>
+
+</div>
+</div>
+
+<!-- СЛАЙД 2 -->
+<div class="slide">
+<div class="card">
+<h1>#vyxbio network</h1>
+
+<p><strong>ЦИФРОВОЙ АНАЛИЗ</strong></p>
+<p>Выявление связей между аккаунтами.</p>
+<p>Анализ цифрового поведения.</p>
+<p>Определение вторичных профилей.</p>
+
+<br>
+
+<p><strong>ПОИСК ИНФОРМАЦИИ</strong></p>
+<p>Поиск по архивам и кэшам.</p>
+<p>Работа с базами утечек.</p>
+<p>Анализ цифровых следов.</p>
+
+<br>
+
+<p><strong>БЕЗОПАСНОСТЬ</strong></p>
+<p>Аудит цифрового профиля.</p>
+<p>Консультации по анонимности.</p>
+<p>Настройка приватности.</p>
+
+<br>
+
+<p>—</p>
+<p>Сотрудничество и кастом задачи — обсуждаются индивидуально.</p>
+
+</div>
+</div>
+
+</div>
+
+<!-- точки -->
+<div class="dots">
+<div class="dot active" onclick="goToSlide(0)"></div>
+<div class="dot" onclick="goToSlide(1)"></div>
 </div>
 
 <audio id="bgMusic" src="music.mp3" loop></audio>
 
 <script>
-const slider = document.getElementById("slider");
 let current = 0;
+const slider = document.getElementById("slider");
+const dots = document.querySelectorAll(".dot");
+const music = document.getElementById("bgMusic");
+let playing = false;
 
-function updateSlide() {
-    slider.style.transform = `translateX(-${current * 100}vw)`;
+/* переключение */
+function goToSlide(index) {
+    current = index;
+    slider.style.transform = `translateX(-${index * 100}vw)`;
+    dots.forEach(dot => dot.classList.remove("active"));
+    dots[index].classList.add("active");
 }
 
-function nextSlide() {
-    current = (current + 1) % 2;
-    updateSlide();
-}
-
-document.body.addEventListener("click", function(e) {
-    if (!e.target.closest("button")) {
-        current = (current + 1) % 2;
-        updateSlide();
-    }
+/* свайп */
+let startX = 0;
+document.addEventListener("touchstart", e => {
+    startX = e.touches[0].clientX;
 });
 
-// МУЗЫКА
-const music = document.getElementById("bgMusic");
-const musicBtn = document.getElementById("musicToggle");
+document.addEventListener("touchend", e => {
+    let endX = e.changedTouches[0].clientX;
+    if (startX - endX > 50 && current < 1) goToSlide(current + 1);
+    if (endX - startX > 50 && current > 0) goToSlide(current - 1);
+});
 
-music.volume = 0;
-
-function fadeInMusic() {
-    music.play().then(() => {
-        let vol = 0;
-        const fade = setInterval(() => {
-            if (vol < 1) {
-                vol += 0.05;
-                music.volume = vol;
+/* музыка */
+function toggleMusic() {
+    if (!playing) {
+        music.volume = 0;
+        music.play();
+        let fade = setInterval(() => {
+            if (music.volume < 1) {
+                music.volume += 0.05;
             } else {
                 clearInterval(fade);
             }
         }, 100);
-    }).catch(() => {});
-}
-
-document.addEventListener("click", () => {
-    if (music.paused) fadeInMusic();
-}, { once: true });
-
-musicBtn.addEventListener("click", () => {
-    if (music.paused) {
-        fadeInMusic();
-        musicBtn.innerText = "🔊 Музыка";
+        playing = true;
     } else {
         music.pause();
-        musicBtn.innerText = "🔇 Музыка";
+        playing = false;
     }
-});
+}
 </script>
 
 </body>
