--- a/index.html
+++ b/index.html
@@ -6,116 +6,180 @@
 <title>vyxbio</title>
 
 <style>
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
+*{
+margin:0;
+padding:0;
+box-sizing:border-box;
+font-family:Arial, sans-serif;
 }
 
-body {
-    height: 100vh;
-    overflow: hidden;
-    background: url("https://fons.grizly.club/uploads/posts/2025-06/26/1750922654029.jpg") no-repeat center center fixed;
-    background-size: cover;
-    color: white;
+body{
+height:100vh;
+overflow:hidden;
+background:url("https://fons.grizly.club/uploads/posts/2025-06/26/1750922654029.jpg") no-repeat center center fixed;
+background-size:cover;
+color:white;
 }
 
 /* затемнение */
-body::before {
-    content: "";
-    position: absolute;
-    inset: 0;
-    background: rgba(0,0,0,0.75);
-    z-index: 0;
+body::before{
+content:"";
+position:absolute;
+inset:0;
+background:rgba(0,0,0,0.75);
+z-index:0;
 }
 
-/* контейнер слайдов */
-.slider {
-    display: flex;
-    width: 200%;
-    height: 100vh;
-    transition: transform 0.6s ease;
-    position: relative;
-    z-index: 1;
+/* слайды */
+.slider{
+display:flex;
+width:200%;
+height:100vh;
+transition:transform 0.7s cubic-bezier(.77,0,.18,1);
+position:relative;
+z-index:1;
 }
 
-.slide {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
+.slide{
+width:100vw;
+height:100vh;
+display:flex;
+justify-content:center;
+align-items:center;
+padding:20px;
 }
 
-.card {
-    max-width: 700px;
-    width: 100%;
-    background: rgba(0,0,0,0.65);
-    backdrop-filter: blur(10px);
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 0 40px rgba(0,0,0,0.5);
-    overflow-y: auto;
-    max-height: 85vh;
+.card{
+width:100%;
+max-width:750px;
+background:rgba(0,0,0,0.55);
+backdrop-filter:blur(12px);
+padding:40px;
+border-radius:25px;
+box-shadow:0 0 60px rgba(0,0,0,0.6);
+overflow-y:auto;
+max-height:88vh;
 }
 
-.card h1 {
-    margin-bottom: 20px;
-    font-size: 28px;
+/* адаптация под телефон */
+@media (max-width:768px){
+.card{
+padding:25px;
+max-height:85vh;
+}
 }
 
-.card p {
-    margin-bottom: 10px;
-    line-height: 1.6;
+/* текст */
+.card h1{
+margin-bottom:25px;
+font-size:28px;
+text-shadow:0 0 10px rgba(255,255,255,0.3);
 }
 
-a {
-    color: #7aa2ff;
-    text-decoration: none;
+.card p{
+opacity:0;
+transform:translateY(15px);
+animation:fadeUp 0.7s forwards;
+margin-bottom:10px;
+line-height:1.6;
+text-shadow:0 0 6px rgba(255,255,255,0.25);
 }
 
-a:hover {
-    text-decoration: underline;
+/* задержка по строкам */
+.card p:nth-child(1){animation-delay:0.1s}
+.card p:nth-child(2){animation-delay:0.2s}
+.card p:nth-child(3){animation-delay:0.3s}
+.card p:nth-child(4){animation-delay:0.4s}
+.card p:nth-child(5){animation-delay:0.5s}
+.card p:nth-child(6){animation-delay:0.6s}
+.card p:nth-child(7){animation-delay:0.7s}
+.card p:nth-child(8){animation-delay:0.8s}
+.card p:nth-child(9){animation-delay:0.9s}
+.card p:nth-child(10){animation-delay:1s}
+.card p:nth-child(11){animation-delay:1.1s}
+.card p:nth-child(12){animation-delay:1.2s}
+.card p:nth-child(13){animation-delay:1.3s}
+.card p:nth-child(14){animation-delay:1.4s}
+.card p:nth-child(15){animation-delay:1.5s}
+
+@keyframes fadeUp{
+to{
+opacity:1;
+transform:translateY(0);
+}
+}
+
+a{
+color:#8fb3ff;
+text-decoration:none;
+}
+
+a:hover{
+text-decoration:underline;
 }
 
 /* точки */
-.dots {
-    position: fixed;
-    bottom: 25px;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 10px;
-    z-index: 2;
+.dots{
+position:fixed;
+bottom:25px;
+left:50%;
+transform:translateX(-50%);
+display:flex;
+gap:12px;
+z-index:2;
 }
 
-.dot {
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: rgba(255,255,255,0.3);
-    cursor: pointer;
+.dot{
+width:10px;
+height:10px;
+border-radius:50%;
+background:rgba(255,255,255,0.3);
+cursor:pointer;
+transition:0.3s;
 }
 
-.dot.active {
-    background: white;
+.dot.active{
+background:white;
+box-shadow:0 0 10px white;
 }
 
-/* музыка кнопка */
-.music-btn {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    z-index: 2;
-    background: rgba(0,0,0,0.6);
-    border: 1px solid rgba(255,255,255,0.3);
-    color: white;
-    padding: 8px 15px;
-    border-radius: 20px;
-    cursor: pointer;
-    backdrop-filter: blur(10px);
+/* музыка */
+.music-btn{
+position:fixed;
+top:20px;
+left:20px;
+z-index:3;
+background:rgba(255,255,255,0.08);
+border:1px solid rgba(255,255,255,0.2);
+color:white;
+padding:8px 16px;
+border-radius:20px;
+cursor:pointer;
+backdrop-filter:blur(8px);
+transition:0.3s;
+}
+
+.music-btn:hover{
+background:rgba(255,255,255,0.15);
+}
+
+/* TELEGRAM кнопка */
+.telegram-btn{
+margin-top:20px;
+display:inline-block;
+padding:10px 22px;
+border-radius:25px;
+border:1px solid rgba(255,255,255,0.3);
+background:rgba(255,255,255,0.08);
+backdrop-filter:blur(10px);
+color:white;
+text-decoration:none;
+transition:0.3s;
+}
+
+.telegram-btn:hover{
+background:rgba(255,255,255,0.18);
+box-shadow:0 0 20px rgba(120,170,255,0.5);
 }
 </style>
 </head>
@@ -136,8 +200,6 @@ a:hover {
 <p>Полное досье (соцсети/связи): 24.99 USDT</p>
 <p>Мониторинг и история активности: 44.99 USDT</p>
 
-<br>
-
 <p><strong>ОБУЧЕНИЕ</strong></p>
 <p>Основы цифрового профилирования — 49.99 USDT</p>
 <p>Персональное наставничество.</p>
@@ -146,23 +208,20 @@ a:hover {
 <p>Обучение работе с API и парсерами.</p>
 <p>Практика: восстановление биографии по цифровому следу.</p>
 
-<br>
-
 <p><strong>СОФТ ПОД ЗАКАЗ</strong></p>
 <p>Боты/парсеры под твои задачи — от 24.99 USDT</p>
-
-<br>
 
 <p><strong>АККАУНТЫ ТЕЛЕГРАМ</strong></p>
 <p>+7 (РФ) — 3.99 USDT</p>
 <p>+380 (Укр) — 4.99 USDT</p>
 <p>+1 (США/Канада) — 7.99 USDT</p>
 
-<br>
-
 <p>—</p>
 <p>по вопросам: @vyxeyes</p>
-<p>канал: <a href="https://t.me/vyxedith" target="_blank">https://t.me/vyxedith</a></p>
+
+<a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">
+Перейти в Telegram
+</a>
 
 </div>
 </div>
@@ -172,36 +231,26 @@ a:hover {
 <div class="card">
 <h1>#vyxbio network</h1>
 
-<p><strong>ЦИФРОВОЙ АНАЛИЗ</strong></p>
-<p>Выявление связей между аккаунтами.</p>
+<p><strong>ЦИФРОВАЯ АНАЛИТИКА</strong></p>
+<p>Поиск связей и скрытых аккаунтов.</p>
 <p>Анализ цифрового поведения.</p>
-<p>Определение вторичных профилей.</p>
+<p>Восстановление удалённых данных.</p>
 
-<br>
+<p><strong>АРХИВЫ И БАЗЫ</strong></p>
+<p>Работа с кэшами и снапшотами.</p>
+<p>Анализ утечек и метаданных.</p>
+<p>Сопоставление цифровых следов.</p>
 
-<p><strong>ПОИСК ИНФОРМАЦИИ</strong></p>
-<p>Поиск по архивам и кэшам.</p>
-<p>Работа с базами утечек.</p>
-<p>Анализ цифровых следов.</p>
-
-<br>
-
-<p><strong>БЕЗОПАСНОСТЬ</strong></p>
+<p><strong>ПРИВАТНОСТЬ</strong></p>
 <p>Аудит цифрового профиля.</p>
-<p>Консультации по анонимности.</p>
-<p>Настройка приватности.</p>
-
-<br>
-
-<p>—</p>
-<p>Сотрудничество и кастом задачи — обсуждаются индивидуально.</p>
+<p>Настройка анонимности.</p>
+<p>Защита личных данных.</p>
 
 </div>
 </div>
 
 </div>
 
-<!-- точки -->
 <div class="dots">
 <div class="dot active" onclick="goToSlide(0)"></div>
 <div class="dot" onclick="goToSlide(1)"></div>
@@ -210,49 +259,46 @@ a:hover {
 <audio id="bgMusic" src="music.mp3" loop></audio>
 
 <script>
-let current = 0;
-const slider = document.getElementById("slider");
-const dots = document.querySelectorAll(".dot");
-const music = document.getElementById("bgMusic");
-let playing = false;
+let current=0;
+const slider=document.getElementById("slider");
+const dots=document.querySelectorAll(".dot");
+const music=document.getElementById("bgMusic");
+let playing=false;
 
-/* переключение */
-function goToSlide(index) {
-    current = index;
-    slider.style.transform = `translateX(-${index * 100}vw)`;
-    dots.forEach(dot => dot.classList.remove("active"));
-    dots[index].classList.add("active");
+function goToSlide(index){
+current=index;
+slider.style.transform=`translateX(-${index*100}vw)`;
+dots.forEach(dot=>dot.classList.remove("active"));
+dots[index].classList.add("active");
 }
 
-/* свайп */
-let startX = 0;
-document.addEventListener("touchstart", e => {
-    startX = e.touches[0].clientX;
+let startX=0;
+document.addEventListener("touchstart",e=>{
+startX=e.touches[0].clientX;
 });
 
-document.addEventListener("touchend", e => {
-    let endX = e.changedTouches[0].clientX;
-    if (startX - endX > 50 && current < 1) goToSlide(current + 1);
-    if (endX - startX > 50 && current > 0) goToSlide(current - 1);
+document.addEventListener("touchend",e=>{
+let endX=e.changedTouches[0].clientX;
+if(startX-endX>50&&current<1)goToSlide(current+1);
+if(endX-startX>50&&current>0)goToSlide(current-1);
 });
 
-/* музыка */
-function toggleMusic() {
-    if (!playing) {
-        music.volume = 0;
-        music.play();
-        let fade = setInterval(() => {
-            if (music.volume < 1) {
-                music.volume += 0.05;
-            } else {
-                clearInterval(fade);
-            }
-        }, 100);
-        playing = true;
-    } else {
-        music.pause();
-        playing = false;
-    }
+function toggleMusic(){
+if(!playing){
+music.volume=0;
+music.play();
+let fade=setInterval(()=>{
+if(music.volume<1){
+music.volume+=0.05;
+}else{
+clearInterval(fade);
+}
+},100);
+playing=true;
+}else{
+music.pause();
+playing=false;
+}
 }
 </script>
 
