--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 
 body {
     font-family: Arial, sans-serif;
-    background: url('bg.jpg') center center / cover no-repeat fixed;
+    background: url('https://fons.grizly.club/uploads/posts/2025-06/26/17509226530947.jpg') center center / cover no-repeat fixed;
     min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     color: white;
+    overflow-x: hidden;
 }
 
-/* затемнение фона */
+/* затемнение + блюр */
 body::before {
     content: "";
     position: fixed;
@@ -32,25 +33,22 @@ body::before {
     z-index: -1;
 }
 
-.card/compilerಗೆeslug;
-
+/* карточка */
 .card {
     width: 90%;
     max-width: 600px;
     padding: 40px;
-    background: rgba(0, 0, 0, 0.75);
+    background: rgba(0, 0, 0, 0.65);
     border-radius: 20px;
     backdrop-filter: blur(20px);
-    box-shadow: 0 0 40px rgba(255, 255, 255, 0.05);
-    animation: fadeIn 1s ease forwards;
+    box-shadow: 0 0 40px rgba(255, 255, 255, 0.08);
+    animation: fadeIn 0.8s ease forwards;
 }
-
-/* убрали overflow и height полностью */
 
 h1 {
     margin-bottom: 20px;
     font-size: 28px;
-    text-shadow: 0 0 15px rgba(255,255,255,0.3);
+    text-shadow: 0 0 20px rgba(255,255,255,0.4);
 }
 
 h2 {
@@ -58,6 +56,7 @@ h2 {
     margin-bottom: 10px;
     font-size: 16px;
     opacity: 0.8;
+    letter-spacing: 1px;
 }
 
 p {
@@ -68,12 +67,15 @@ p {
     animation: textAppear 0.6s ease forwards;
 }
 
-p:nth-child(1) { animation-delay: 0.1s; }
-p:nth-child(2) { animation-delay: 0.2s; }
-p:nth-child(3) { animation-delay: 0.3s; }
-p:nth-child(4) { animation-delay: 0.4s; }
-p:nth-child(5) { animation-delay: 0.5s; }
-p:nth-child(6) { animation-delay: 0.6s; }
+/* поочередное появление */
+p:nth-of-type(1) { animation-delay: 0.1s; }
+p:nth-of-type(2) { animation-delay: 0.2s; }
+p:nth-of-type(3) { animation-delay: 0.3s; }
+p:nth-of-type(4) { animation-delay: 0.4s; }
+p:nth-of-type(5) { animation-delay: 0.5s; }
+p:nth-of-type(6) { animation-delay: 0.6s; }
+p:nth-of-type(7) { animation-delay: 0.7s; }
+p:nth-of-type(8) { animation-delay: 0.8s; }
 
 .telegram-btn {
     margin-top: 25px;
@@ -81,18 +83,20 @@ p:nth-child(6) { animation-delay: 0.6s; }
     padding: 12px 28px;
     border-radius: 40px;
     background: rgba(255,255,255,0.05);
-    border: 1px solid rgba(255,255,255,0.2);
+    border: 1px solid rgba(255,255,255,0.25);
     color: white;
     text-decoration: none;
     backdrop-filter: blur(10px);
-    transition: 0.3s;
+    transition: 0.3s ease;
 }
 
 .telegram-btn:hover {
     background: rgba(255,255,255,0.15);
-    box-shadow: 0 0 20px rgba(255,255,255,0.3);
+    box-shadow: 0 0 25px rgba(255,255,255,0.4);
+    transform: translateY(-2px);
 }
 
+/* анимации */
 @keyframes fadeIn {
     from { opacity: 0; transform: scale(0.95); }
     to { opacity: 1; transform: scale(1); }
@@ -105,8 +109,13 @@ p:nth-child(6) { animation-delay: 0.6s; }
     }
 }
 
-/* Адаптация под телефон */
+/* адаптация под телефон */
 @media (max-width: 600px) {
+    body {
+        align-items: flex-start;
+        padding: 40px 0;
+    }
+
     .card {
         padding: 25px;
     }
