--- a/index.html
+++ b/index.html
@@ -143,11 +143,9 @@ p:nth-of-type(8) { animation-delay: 0.8s; }
     <p>Работа с API и парсерами</p>
 
     <h2>АККАУНТЫ TELEGRAM</h2>
-    <p>+7 — 3.99 USDT</p>
-    <p>+380 — 4.99 USDT</p>
-    <p>+1 — 7.99 USDT</p>
+    <p>СКОРО</p>
 
-    <a href="https://t.me/yourusername" class="telegram-btn">Telegram</a>
+    <a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">Telegram</a>
 </div>
 
 </body>
