--- a/index.html
+++ b/index.html
@@ -132,19 +132,23 @@ p:nth-of-type(8) { animation-delay: 0.8s; }
 <div class="card">
     <h1>#vyxbio analytics</h1>
 
-    <h2>РАССЛЕДОВАНИЯ</h2>
+    <h2>video editor</h2>
     <p>Экспресс-проверка личности — 9.99 USDT</p>
     <p>Полное досье (соцсети/связи) — 24.99 USDT</p>
     <p>Мониторинг активности — 44.99 USDT</p>
 
-    <h2>ОБУЧЕНИЕ</h2>
-    <p>Основы цифрового профилирования — 49.99 USDT</p>
+    <h2>ex-osint</h2>
+    <p>digital analytics</p>
     <p>Сбор и анализ OSINT</p>
     <p>Работа с API и парсерами</p>
+    </p>в прошлом</p>
 
     <h2>АККАУНТЫ TELEGRAM</h2>
     <p>СКОРО</p>
-
+   
+    </h2>amz workflow</h2>
+    <p>1100 audience<p>
+    
     <a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">Telegram</a>
 </div>
 
