--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ p:nth-of-type(8) { animation-delay: 0.8s; }
 <div class="card">
     <h1>#vyxbio analytics</h1>
 
-    <h2>video editor</h2>
+    <h2>Услуги</h2>
     <p>Экспресс-проверка личности — 9.99 USDT</p>
     <p>Полное досье (соцсети/связи) — 24.99 USDT</p>
     <p>Мониторинг активности — 44.99 USDT</p>
@@ -145,11 +145,8 @@ p:nth-of-type(8) { animation-delay: 0.8s; }
 
     <h2>АККАУНТЫ TELEGRAM</h2>
     <p>СКОРО</p>
-   
-    </h2>amz workflow</h2>
-    <p>1100 audience<p>
     
-    <a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">Telegram</a>
+    <a href="https://t.me/vyxedith" target="_blank" class="telegram-btn">Telegram channel</a>
 </div>
 
 </body>
